--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Painel de Produtos para NATIONAL OILWELL VARCO DO BRASIL LTDA</title>
+    <title>Painel de Produtos para indústria Óleo e Gás</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');
@@ -17,7 +17,7 @@
 
     <div class="max-w-7xl mx-auto bg-white rounded-xl shadow-2xl p-8 mb-8">
         <header class="text-center mb-10">
-            <h1 class="text-5xl font-extrabold text-gray-900 leading-tight">Painel de Produtos para <span class="text-orange-500">NATIONAL OILWELL VARCO DO BRASIL LTDA</span></h1>
+            <h1 class="text-5xl font-extrabold text-gray-900 leading-tight">Painel de Produtos para <span class="text-orange-500">Indústria Óleo e Gás</span></h1>
             <p class="mt-4 text-xl text-gray-500 font-light">Catálogo interativo de pastas e graxas.</p>
         </header>
 
